# stippleChallenge

./: ENABLE_GITHUB_PAGES.md  GITHUB_SUBMISSION.md  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  run_stippling.py  run_with_path.py  submit_to_github.bat  submit_to_github.ps1
docs/: _config.yml  index.md
stipple/: __init__.py  blue_noise.py  importance.py  runner.py  viz.py
